--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-animated-numbers": "^0.18.0",
     "react-dom": "^18.3.1",
     "react-konva": "18.2.10",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toggle-dark-mode": "^1.1.1",
     "react-type-animation": "^3.2.0",
+    "redux": "^5.0.1",
     "rimraf": "5.0.7",
     "uuid": "^9.0.1"
   },
