--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "cross-env GENERATE_SOURCEMAP=false vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "watch": "tailwindcss -i tailwind.css -o ./src/style.css --watch"
   },
   "dependencies": {
-    "@babel/core": "^7.24.6",
+    "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-async-generator-functions": "7.20.7",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-logical-assignment-operators": "7.20.7",
@@ -20,20 +20,31 @@
     "@babel/plugin-proposal-object-rest-spread": "7.20.7",
     "@babel/plugin-proposal-optional-catch-binding": "7.18.6",
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
-    "@babel/preset-env": "^7.24.6",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@babel/preset-env": "^7.24.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
+    "@react-email/components": "0.0.21",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "create-email": "^0.0.29",
     "debug": "^4.3.5",
     "fsevents": "^2.3.3",
     "glob": "7.2.3",
     "hamburger-react": "^2.5.1",
     "inflight": "1.0.6",
+    "mui-tel-input": "^5.1.2",
     "querystring": "0.2.1",
     "react": "^18.3.1",
     "react-animated-numbers": "^0.18.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-konva": "18.2.10",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.24.1",
+    "react-scroll": "^1.9.0",
     "react-toggle-dark-mode": "^1.1.1",
     "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
@@ -43,12 +54,13 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "cross-env": "^7.0.3",
     "eslint": "8.57.0",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.12"
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.3"
   }
 }
